--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the executable path and initialize Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
@@ -49,6 +50,7 @@
     "# Convert the browser html to a soup object and then quit the browser\n",
     "html = browser.html\n",
     "news_soup = soup(html, 'html.parser')\n",
+    "\n",
     "slide_elem = news_soup.select_one('div.list_text')"
    ]
   },
@@ -69,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the parent element to find the first 'a' tag and save it as 'news_title'\n",
-    "news_title =  slide_elem.find('div', class_='content_title').get_text()\n",
+    "# Use the parent element to find the first a tag and save it as `news_title`\n",
+    "news_title = slide_elem.find('div', class_='content_title').get_text()\n",
     "news_title"
    ]
   },
@@ -127,7 +129,8 @@
    "source": [
     "# Parse the resulting html with soup\n",
     "html = browser.html\n",
-    "img_soup = soup(html, 'html.parser')"
+    "img_soup = soup(html, 'html.parser')\n",
+    "img_soup"
    ]
   },
   {
@@ -137,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the releative image url\n",
+    "# find the relative image url\n",
     "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
     "img_url_rel"
    ]
@@ -149,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the base URL to create an absolute URL\n",
+    "# Use the base url to create an absolute url\n",
     "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
     "img_url"
    ]
@@ -170,9 +173,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "df.columns=['description', 'Mars', 'Earch']\n",
-    "df.set_index('description', inplace=True)\n",
-    "df"
+    "df.head()"
    ]
   },
   {
