--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -28,11 +28,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 103.0.5060\n",
-      "Get LATEST chromedriver version for 103.0.5060 google-chrome\n",
-      "There is no [mac64] chromedriver for browser 103.0.5060 in cache\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/103.0.5060.134/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/andreadarrah/.wdm/drivers/chromedriver/mac64/103.0.5060.134]\n"
+      "Current google-chrome version is 104.0.5112\n",
+      "Get LATEST chromedriver version for 104.0.5112 google-chrome\n",
+      "Driver [/Users/andreadarrah/.wdm/drivers/chromedriver/mac64/104.0.5112.79/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -88,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA Invites Students to Name Mars 2020 Rover</div>"
+       "<div class=\"content_title\">NASA's Perseverance Rover Attached to Atlas V Rocket</div>"
       ]
      },
      "execution_count": 5,
@@ -109,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "'NASA Invites Students to Name Mars 2020 Rover'"
+       "\"NASA's Perseverance Rover Attached to Atlas V Rocket\""
       ]
      },
      "execution_count": 6,
@@ -132,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Through Nov. 1, K-12 students in the U.S. are encouraged to enter an essay contest to name NASA's next Mars rover.\""
+       "'Ready for its launch later in the month, the Mars-bound rover will touch terra firma no more.'"
       ]
      },
      "execution_count": 7,
@@ -272,7 +270,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Mars</th>\n",
-       "      <th>Earch</th>\n",
+       "      <th>Earth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>description</th>\n",
@@ -321,7 +319,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                                    Mars            Earch\n",
+       "                                    Mars            Earth\n",
        "description                                              \n",
        "Mars - Earth Comparison             Mars            Earth\n",
        "Diameter:                       6,779 km        12,742 km\n",
@@ -339,7 +337,7 @@
    ],
    "source": [
     "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "df.columns=['description', 'Mars', 'Earch']\n",
+    "df.columns=['description', 'Mars', 'Earth']\n",
     "df.set_index('description', inplace=True)\n",
     "df"
    ]
@@ -353,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earch</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
      "execution_count": 14,
@@ -389,7 +387,7 @@
    "outputs": [],
    "source": [
     "# 1. Use browser to visit the URL \n",
-    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "url = 'https://marshemispheres.com/'\n",
     "browser.visit(url)"
    ]
   },
@@ -415,7 +413,7 @@
     "    # find relative image url\n",
     "    img_url_rel = img_soup.find('img', class_='wide-image', id=False).get('src')\n",
     "    # use base URL to create an absolute URL\n",
-    "    img_url = f'https://astrogeology.usgs.gov/{img_url_rel}'\n",
+    "    img_url = f'https://marshemispheres.com/{img_url_rel}'\n",
     "    # find the title of the image\n",
     "    img_title = img_soup.find('h2', class_='title').text\n",
     "    # append the list with a dictionary of the url and title\n",
@@ -434,13 +432,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'img_url': 'https://astrogeology.usgs.gov//cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg', 'title': 'Cerberus Hemisphere Enhanced'}, {'img_url': 'https://astrogeology.usgs.gov//cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg', 'title': 'Schiaparelli Hemisphere Enhanced'}, {'img_url': 'https://astrogeology.usgs.gov//cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg', 'title': 'Syrtis Major Hemisphere Enhanced'}, {'img_url': 'https://astrogeology.usgs.gov//cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg', 'title': 'Valles Marineris Hemisphere Enhanced'}]\n"
+      "[{'img_url': 'https://marshemispheres.com/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
+      "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://marshemispheres.com/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
+      "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://marshemispheres.com/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
+      "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+      " {'img_url': 'https://marshemispheres.com/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg',\n",
+      "  'title': 'Valles Marineris Hemisphere Enhanced'}]\n"
      ]
     }
    ],
    "source": [
     "# 4. Print the list that holds the dictionary of each image url and title.\n",
-    "print(hemisphere_imgs)"
+    "pp.pprint(hemisphere_imgs)"
    ]
   },
   {
@@ -453,6 +458,14 @@
     "# 5. Quit the browser\n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93deb937",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
