Completed/fixed Challenge

--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "787d1ea1",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6ef5ad07",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
    ],
    "source": [
     "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "df.columns=['description', 'Mars', 'Earth']\n",
+    "df.columns=['Description', 'Mars', 'Earth']\n",
     "df.set_index('description', inplace=True)\n",
     "df"
    ]
@@ -458,14 +458,6 @@
     "# 5. Quit the browser\n",
     "browser.quit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93deb937",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
